# libhijacker-game-patch

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README  README.md  build.bat  build.sh  changes.diff  daemon_log.py  kill_daemon.py  launch.py  linker.x  send_elf.py
.github/workflows/: cmake.yml
crt/: CMakeLists.txt  crt0.c
daemon/: CMakeLists.txt  linker.x
daemon/source/: commands.cpp  crt0.c  elfserver.cpp  fd.hpp  game_patch.cpp  game_patch.hpp  game_patch_memory.cpp  game_patch_memory.hpp  game_patch_thread.cpp  game_patch_thread.hpp  game_patch_xml.cpp  game_patch_xml.hpp  game_patch_xml_cfg.hpp  klogger.cpp  launcher.hpp  main.cpp  pad.hpp  server.cpp  server.hpp  servers.hpp  thread.hpp  title.cpp  titleid_map.hpp  xml_cfg.hpp
daemon_shim/: CMakeLists.txt
daemon_shim/source/: cmd.c  cmd.h  ftp.c  main.cpp
data/: game_patch_fliprate_list.xml
ftp/: cmd.c
include/: backtrace.hpp  build.h  dbg.hpp  elfldr.hpp  hijacker.hpp  kernel.hpp  kernel_helpers.h  nid.hpp  notify.hpp  offsets.hpp  print.hpp  util.hpp
include/dbg/: args.hpp  dbg.hpp
include/elf/: elf.hpp  loader.hpp
include/elf/nid/: b64.hpp  nid.hpp  sha1.hpp
include/hijacker/: allocator.hpp  hijacker.hpp  memory.hpp  spawner.hpp
include/kernel/: frame.hpp  kernel.hpp  kthread.hpp  proc.hpp  rtld.hpp
libhijacker/: CMakeLists.txt
libhijacker/source/: backtrace.cpp  dbg.cpp  hijacker.cpp  kernel.cpp  kernel_helpers.c  notify.cpp  offsets.cpp  print.cpp  spawner.cpp
libhijacker/source/elf/: elf.cpp  sysmodules.hpp
shellcode/: allocator.cpp  build_cmd.txt  execve.c  format_shellcode.py  kernelrw.cpp  libloader.cpp  rfork_thread.c  spawn.cpp
spawner/: CMakeLists.txt  linker.x
spawner/source/: app.cpp  daemon.c  daemon.s  kernel_helpers.c  main.cpp  main.h  start.c
stubber/: elf.go  main.go  root.cmake  toolchain.cmake
test_elf/: CMakeLists.txt  build.bat  linker.x
test_elf/source/: main.cpp  start.c
